source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/test_already_running.template.dart
// **************************************************************************
// Generator: AngularDart Compiler
// **************************************************************************

import 'test_already_running.dart';
export 'test_already_running.dart';

// No initReflector() linking required.
void initReflector() {}
